# glfwpp

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: clang-format.yml  clang-tidy.yml  cmake.yml  codeql.yml
examples/: CMakeLists.txt  basic.cpp  emscripten.cpp  events.cpp  imgui_integration.cpp  moveability.cpp  multiple_tus1.cpp  multiple_tus2.cpp  multiple_windows.cpp  type_traits.cpp  window_attributes.cpp
include/glfwpp/: error.h  event.h  glfwpp.h  helper.h  joystick.h  monitor.h  native.h  version.h  vulkan.h  window.h
